--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "tranducngocmygit134 <tranducngoc134@gmail.com>",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start:dev": "nodemon",
     "start:prod": "NODE_ENV=production node -r dotenv/config -r  ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/index.js dotenv_config_path=./dist/.env",
@@ -11,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/morgan": "^1.9.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -41,7 +45,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@types/morgan": "^1.9.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
