--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/morgan": "^1.9.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -22,6 +21,7 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "^8.2.2",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.0",
     "@types/nodemailer": "^6.4.1",
     "@types/passport": "^1.0.6",
@@ -41,8 +41,7 @@
     "mocha": "^8.4.0",
     "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
-    "typescript": "^4.2.4"
+    "prettier": "^2.3.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -63,6 +62,7 @@
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.3.2",
     "validator": "^13.6.0"
   }
 }
