--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig",
-  "exclude": ["src/__tests__", "**/*.test.ts", "**/*./mock.ts"]
+  "exclude": ["src/__test__", "**/*.spec.ts", "**/*./mock.ts"]
 }
