--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty
 services:
   - mongodb
 env:
-  - NODE_ENV=ci PORT=7000 GMAIL_USER=tdn.social.network@gmail.com GMAIL_PASSWORD=socialnetwork
+  - NODE_ENV=ci PORT=7000
 cache:
   directories:
     - node_modules
@@ -14,4 +14,4 @@ install:
 script:
   - nohup npm run start &
   - sleep 3
-  - bash mocha.sh type=full
+  - bash travis.sh type=full
